# tedio

./: Cargo.toml  README.md
crates/tedio-scope/: Cargo.toml
crates/tedio-scope/examples/: direct_await_in_tokio.rs  non_blocking_tedio.rs
crates/tedio-scope/src/: lib.rs  scope.rs  waker.rs
