[package]
name = "tedio-scope"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Scoped async execution with support for non-'static tasks"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
futures.workspace = true
pin-project.workspace = true

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
tempfile = "3.8"
